# pc-tree

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  GraphRegistry.cpp  LICENSE.txt  NodePCRotation.cpp  PCTree_basic.cpp  PCTree_construction.cpp  PCTree_intersect.cpp  PCTree_restriction.cpp  README.md  clang_format.sh  docker-install.sh  docker-start.sh  master.cpp  requirements.txt
.github/workflows/: check-build-test.yml
download/: .gitignore  0001-apply-manual-changes-to-java-libs.patch  0001-manual-changes-to-graphtea.patch  0002-apply-manual-changes-to-cpp-libs.patch  0002-manual-changes-to-jgraphed.patch  0003-apply-manual-changes-to-python-files.patch  0003-manual-changes-to-jppzanetti.patch  0004-manual-changes-to-sagemath.patch  0005-manual-changes-to-bivocPQ.patch  0006-manual-changes-to-creislePQ.patch  0007-manual-changes-to-graphSetPQ.patch  0008-manual-changes-to-gregablePQ.patch  0009-manual-changes-to-autogenerated-cpp-zanetti.patch  convert.sh  download.sh
evaluation/: evaluation.py
evaluation/javaEvaluation/: .gitignore  build.gradle  settings.gradle
evaluation/javaEvaluation/src/main/java/java_evaluation/: ConsecutiveOnesInterface.java  GraphTeaAdapter.java  JGraphEdAdapter.java  JppzanettiAdapter.java  TestPlanarity.java  TestRestrictions.java  TestUniqueID.java
evaluation/plots/: common.py  performance.py  planarity.py  restrictions.py
evaluation/sagemath/: main.py
examples/: CMakeLists.txt  pctree.cpp
include/: NodePCRotation.h  PCArc.h  PCEnum.h  PCNode.h  PCRegistry.h  PCTree.h  PCTreeIterators.h
include/adapters/: BiVocPQTreeAdapter.h  C1IUtils.h  ConsecutiveOnesInterface.h  CppZanettiPQRTreeAdapter.h  GraphSetPQTreeAdapter.h  GregablePQTreeAdapter.h  HsuPCTreeAdapter.h  OgdfPQTreeAdapter.h  ReislePQTreeAdapter.h  UnionFindPCTreeAdapter.h
include/pctree/: NodePCRotation.h  PCEnum.h  PCNode.h  PCRegistry.h  PCTree.h  PCTreeForest.h  PCTreeIterators.h
include/pctree/util/: DisjointSets.h  IntrusiveList.h  RegisteredArray.h  RegisteredSet.h  copy_move.h  defines.h
include/util/: RegisteredArray.h
include/utils/: FilteringBFS.h  GraphIterators.h  GraphRegistry.h  RegisteredArray.h  RegisteredElementSet.h
libraries/: bigInt
libraries/zanettiPQR/: NodeRef.hpp  PQRTree.cpp
src/: NodePCRotation.cpp  PCNode.cpp  PCTreeForest.cpp  PCTree_basic.cpp  PCTree_construction.cpp  PCTree_intersect.cpp  PCTree_restriction.cpp  master.cpp
src/exec/: CustomPlanarPQTree.h  likwid_utils.h  make_graphs.cpp  make_restrictions_matrix.cpp  make_restrictions_planarity.cpp  make_restrictions_tree.cpp  test_planarity.cpp  test_planarity_performance.cpp  test_restrictions.cpp  utils.h
src/test/: construction.cpp  intersection.cpp  restriction.cpp  test.cpp
test/: bandit_main.cpp  pctree-auto.cpp  pctree.cpp
